<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:theme="@style/BottomSheetDialogTheme">

    <ImageView
        android:id="@+id/imv_close"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/txt_close_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close_green" />

    <TextView
        android:id="@+id/txv_filter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/txt_filter_movies"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imv_close"
        app:layout_constraintEnd_toStartOf="@+id/imv_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imv_close" />

    <TextView
        android:id="@+id/txv_popular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/txt_popular_movie"
        android:textAlignment="viewStart"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_filter" />

    <TextView
        android:id="@+id/txv_top_rated"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/txt_top_rated_movies"
        android:textAlignment="textStart"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_popular" />

    <ImageView
        android:id="@+id/imv_popular"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/txt_check_popular_movies"
        app:layout_constraintBottom_toTopOf="@+id/txv_popular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_popular"
        app:srcCompat="@drawable/ic_check_green" />

    <ImageView
        android:id="@+id/imv_top_rated"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/txt_check_top_rated"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/txv_top_rated"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_top_rated"
        app:srcCompat="@drawable/ic_check_green" />

    <TextView
        android:id="@+id/txv_favourite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/txt_favourite_movies"
        android:textAlignment="textStart"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imv_favourite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_top_rated" />

    <ImageView
        android:id="@+id/imv_favourite"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/txt_check_favourite"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/txv_favourite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_favourite"
        app:srcCompat="@drawable/ic_check_green" />

</android.support.constraint.ConstraintLayout>